Cart alignment fix css

--- a/src/app/admin-main-layout/content/product-list/product-list.component.css
+++ b/src/app/admin-main-layout/content/product-list/product-list.component.css
@@ -120,7 +120,7 @@
 }
 
 .card-holder-user {
-  width: 30%;
+  width: 18rem;
 }
 
 .card-height-24 {
